# ed25519

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
src/: lib.rs  num_bigint.rs
