[package]
name = "ed25519"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.4"
num-traits = "0.2.18"
lazy_static = "1.4.0"
bnum = "0.10.0"
modinverse = "0.1.1"
modpow = "1.0.1"
rand = "0.8.5"
sha2 = "0.10.8"