[package]
name = "ed25519"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std=[]

[dependencies]
num-traits = { version = "0.2.18", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
rand = { version = "0.9", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
fixed-bigint = "0.1.12"
modmath = { path = "../modmath" }

[dev-dependencies]
# intentionally empty

[[bin]]
name = "keygen"
required-features = ["thread_rng"]
